fixed your white space issue

--- a/home.css
+++ b/home.css
@@ -1,9 +1,17 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 
+img{
+  width:50%;
+  float: left;
+}
+body{
+  max-width: 425px;
+}
+
 .home-page-top-main {
     width: 100%;
     height: 400px;
-
+    position: relative;
     background: url('img/main-bg.jpg') center no-repeat;
     background-size: cover;
 }
@@ -17,7 +25,7 @@
     font-size: 44px;
     position: absolute;
     top: 94px;
-    left: 30px;
+    left: 45px;
 }
 
 
@@ -28,6 +36,9 @@
     background: #000;
     border-radius: 50px;
     text-align: center;
+    position: absolute;
+    bottom: 120px;
+    left: 30px;
 }
 
 
@@ -40,7 +51,7 @@
 }
 
 .home-page-product-card {
-    width: 50%;
+    width: 100%;
     cursor: pointer;
 }
 
@@ -50,4 +61,14 @@
 
 .no-display {
     display: none;
+}
+.menu{
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 40px;
+  height: 45px;
+}
+.menu img{
+  width: 80%;
 }
